gccida/g1/dump_bb
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_bb/src/cfgrtl.c:1904:10: error: use of undeclared identifier 'unk_6378FD'
fwrite( &unk_6378FD, 1uLL, 0x11uLL, outf); 
         ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/dump_bb/src/obj/cfgrtl.o] Error 1
